--- a/usr/src/cmd/fm/dicts/SUN4.po
+++ b/usr/src/cmd/fm/dicts/SUN4.po
@@ -25,7 +25,6 @@
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
 #
-#
 # code: SUN4-8000-0Y
 # keys: fault.io.fire.asic
 #
@@ -66,13 +65,13 @@ msgstr "Fault"
 msgid "SUN4-8000-2H.severity"
 msgstr "Critical"
 msgid "SUN4-8000-2H.description"
-msgstr "\nA problem was detected in the system core bus.\n  Refer to %s for more information."
+msgstr "This is an unexpected diagnosis. Please contact Sun support for details.  Refer to %s for more information."
 msgid "SUN4-8000-2H.response"
-msgstr "One or more device instances may be disabled"
+msgstr "None"
 msgid "SUN4-8000-2H.impact"
-msgstr "Loss of services provided by the device instances associated with this fault"
+msgstr "None"
 msgid "SUN4-8000-2H.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.\n"
+msgstr "None"
 #
 # code: SUN4-8000-3D
 # keys: fault.io.hbus
@@ -130,13 +129,13 @@ msgstr "Fault"
 msgid "SUN4-8000-6S.severity"
 msgstr "Critical"
 msgid "SUN4-8000-6S.description"
-msgstr "\nA problem was detected in the system core bus.\n  Refer to %s for more information."
+msgstr "This is an unexpected diagnosis. Please contact Sun support for details.  Refer to %s for more information."
 msgid "SUN4-8000-6S.response"
-msgstr "One or more device instances may be disabled"
+msgstr "None"
 msgid "SUN4-8000-6S.impact"
-msgstr "Loss of services provided by the device instances associated with this fault"
+msgstr "None"
 msgid "SUN4-8000-6S.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.\n"
+msgstr "None"
 #
 # code: SUN4-8000-75
 # keys: fault.io.fire.asic fault.io.fire.pciex.device
@@ -178,13 +177,13 @@ msgstr "Fault"
 msgid "SUN4-8000-9J.severity"
 msgstr "Critical"
 msgid "SUN4-8000-9J.description"
-msgstr "A problem has been detected in the PCI/PCI-Express subsystem.  Refer to %s for more information."
+msgstr "This is an unexpected diagnosis. Please contact Sun support for details.  Refer to %s for more information."
 msgid "SUN4-8000-9J.response"
-msgstr "One or more device instances may be disabled"
+msgstr "None"
 msgid "SUN4-8000-9J.impact"
-msgstr "Loss of services provided by the device instances associated with this fault"
+msgstr "None"
 msgid "SUN4-8000-9J.action"
-msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.\n"
+msgstr "None"
 #
 # code: SUN4-8000-A2
 # keys: fault.io.fire.pci.device
@@ -210,10 +209,42 @@ msgstr "Fault"
 msgid "SUN4-8000-CX.severity"
 msgstr "Critical"
 msgid "SUN4-8000-CX.description"
-msgstr "\nA problem was detected in the PCI-Express subsystem or controlling software.\n  Refer to %s for more information."
+msgstr "This is an unexpected diagnosis. Please contact Sun support for details.  Refer to %s for more information."
 msgid "SUN4-8000-CX.response"
-msgstr "One or more device instances may be disabled"
+msgstr "None"
 msgid "SUN4-8000-CX.impact"
-msgstr "Loss of services provided by the device instances associated with this fault"
+msgstr "None"
 msgid "SUN4-8000-CX.action"
-msgstr "\nEnsure latest drivers and patches are installed, schedule a repair\nprocedure to replace the affected device if necessary,\nor contact Sun for support.\n"
+msgstr "None"
+#
+# code: SUN4-8000-D4
+# keys: fault.io.fire.asic fault.io.fire.pci.device fault.io.fire.pciex.device
+#
+msgid "SUN4-8000-D4.type"
+msgstr "Fault"
+msgid "SUN4-8000-D4.severity"
+msgstr "Critical"
+msgid "SUN4-8000-D4.description"
+msgstr "A problem has been detected in the PCI/PCI-Express subsystem.  Refer to %s for more information."
+msgid "SUN4-8000-D4.response"
+msgstr "One or more device instances may be disabled"
+msgid "SUN4-8000-D4.impact"
+msgstr "Loss of services provided by the device instances associated with this fault"
+msgid "SUN4-8000-D4.action"
+msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.\n"
+#
+# code: SUN4-8000-ER
+# keys: fault.io.fire.asic fault.io.fire.pci.device
+#
+msgid "SUN4-8000-ER.type"
+msgstr "Fault"
+msgid "SUN4-8000-ER.severity"
+msgstr "Critical"
+msgid "SUN4-8000-ER.description"
+msgstr "A problem has been detected in the PCI/PCI-Express subsystem.  Refer to %s for more information."
+msgid "SUN4-8000-ER.response"
+msgstr "One or more device instances may be disabled"
+msgid "SUN4-8000-ER.impact"
+msgstr "Loss of services provided by the device instances associated with this fault"
+msgid "SUN4-8000-ER.action"
+msgstr "\nSchedule a repair procedure to replace the affected device.  Use\nfmdump -v -u EVENT_ID to identify the device or contact\nSun for support.\n"
