--- a/usr/src/lib/libzonecfg/dtd/zonecfg.dtd.1
+++ b/usr/src/lib/libzonecfg/dtd/zonecfg.dtd.1
@@ -4,9 +4,8 @@
  CDDL HEADER START
 
  The contents of this file are subject to the terms of the
- Common Development and Distribution License, Version 1.0 only
- (the "License").  You may not use this file except in compliance
- with the License.
+ Common Development and Distribution License (the "License").
+ You may not use this file except in compliance with the License.
 
  You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
  or http://www.opensolaris.org/os/licensing.
@@ -21,7 +20,7 @@
 
  CDDL HEADER END
 
- Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+ Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
  Use is subject to license terms.
 
     ident	"%Z%%M%	%I%	%E% SMI"
@@ -73,7 +72,30 @@
 
 <!ATTLIST dataset	name		CDATA #REQUIRED>
 
-<!ELEMENT zone		(filesystem | inherited-pkg-dir | network | device | rctl | attr | dataset)*>
+<!ELEMENT package	EMPTY>
+
+<!ATTLIST package	name		CDATA #REQUIRED
+			version		CDATA #REQUIRED>
+
+<!ELEMENT obsoletes	EMPTY>
+<!ATTLIST obsoletes	id		CDATA #REQUIRED>
+
+<!ELEMENT incompatible	EMPTY>
+<!ATTLIST incompatible	id		CDATA #REQUIRED>
+
+<!ELEMENT patch	(obsoletes | incompatible)* >
+
+<!ATTLIST patch		id		CDATA #REQUIRED>
+
+<!ELEMENT dev-perm	EMPTY>
+
+<!ATTLIST dev-perm	name		CDATA #REQUIRED
+			uid		CDATA #REQUIRED
+			gid		CDATA #REQUIRED
+			mode		CDATA #REQUIRED
+			acl		CDATA #REQUIRED>
+
+<!ELEMENT zone		(filesystem | inherited-pkg-dir | network | device | rctl | attr | dataset | package | patch | dev-perm)*>
 
 <!ATTLIST zone		name		CDATA #REQUIRED
 			zonepath	CDATA #REQUIRED
