--- a/usr/src/cmd/fm/dicts/AMD.po
+++ b/usr/src/cmd/fm/dicts/AMD.po
@@ -56,7 +56,7 @@ msgstr "Pages of memory associated with this memory module are being removed fro
 msgid "AMD-8000-2F.impact"
 msgstr "Total system memory capacity will be reduced as pages are retired."
 msgid "AMD-8000-2F.action"
-msgstr "Schedule a repair procedure to replace the affected memory module.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected memory module.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-3K
 # keys: fault.memory.dimm_ck
@@ -72,7 +72,7 @@ msgstr "Pages of memory associated with this memory module are being removed fro
 msgid "AMD-8000-3K.impact"
 msgstr "Total system memory capacity will be reduced as pages are retired."
 msgid "AMD-8000-3K.action"
-msgstr "Schedule a repair procedure to replace the affected memory module.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected memory module.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-48
 # keys: fault.memory.dimm_ue
@@ -88,7 +88,7 @@ msgstr "Pages of memory associated with this memory module are being removed fro
 msgid "AMD-8000-48.impact"
 msgstr "Total system memory capacity will be reduced as pages are retired."
 msgid "AMD-8000-48.action"
-msgstr "Schedule a repair procedure to replace the affected memory module.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected memory module.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-5M
 # keys: fault.cpu.amd.l2cachedata
@@ -104,7 +104,7 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-5M.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-5M.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-67
 # keys: fault.cpu.amd.l2cachetag
@@ -120,7 +120,7 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-67.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-67.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-7U
 # keys: fault.cpu.amd.icachedata
@@ -136,7 +136,7 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-7U.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-7U.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-8L
 # keys: fault.cpu.amd.icachetag
@@ -152,7 +152,7 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-8L.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-8L.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-9G
 # keys: fault.cpu.amd.icachestag
@@ -168,7 +168,7 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-9G.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-9G.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-AV
 # keys: fault.cpu.amd.dcachedata
@@ -184,7 +184,7 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-AV.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-AV.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-C0
 # keys: fault.cpu.amd.dcachetag
@@ -200,7 +200,7 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-C0.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-C0.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-DT
 # keys: fault.cpu.amd.l1itlb
@@ -216,7 +216,7 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-DT.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-DT.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-E6
 # keys: fault.cpu.amd.l2itlb
@@ -232,7 +232,7 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-E6.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-E6.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-FN
 # keys: fault.cpu.amd.dcachestag
@@ -248,7 +248,7 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-FN.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-FN.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-G9
 # keys: fault.cpu.amd.l1dtlb
@@ -264,7 +264,7 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-G9.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-G9.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-HK
 # keys: fault.cpu.amd.l2dtlb
@@ -280,7 +280,7 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-HK.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-HK.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
 #
 # code: AMD-8000-JF
 # keys: fault.cpu.amd.datapath
@@ -296,4 +296,4 @@ msgstr "An attempt will be made to remove this CPU from service."
 msgid "AMD-8000-JF.impact"
 msgstr "Performance of this system may be affected."
 msgid "AMD-8000-JF.action"
-msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u  to identify the module."
+msgstr "Schedule a repair procedure to replace the affected CPU.  Use fmdump -v -u <EVENT_ID> to identify the module."
