--- a/usr/src/lib/libzonecfg/dtd/zonecfg.dtd.1
+++ b/usr/src/lib/libzonecfg/dtd/zonecfg.dtd.1
@@ -23,7 +23,7 @@
  Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
  Use is subject to license terms.
 
-    ident	"%Z%%M%	%I%	%E% SMI"
+ ident	"%Z%%M%	%I%	%E% SMI"
 -->
 
 <!--Element Definitions-->
@@ -57,7 +57,7 @@
 			limit		CDATA #REQUIRED
 			action		CDATA #REQUIRED>
 
-<!ELEMENT rctl          (rctl-value)*>
+<!ELEMENT rctl		(rctl-value)*>
 
 <!ATTLIST rctl		name		CDATA #REQUIRED>
 
@@ -101,4 +101,5 @@
 			zonepath	CDATA #REQUIRED
 			autoboot	(true | false) #REQUIRED
 			pool		CDATA ""
+			limitpriv	CDATA ""
 			version		NMTOKEN #FIXED '1'>
