--- a/usr/src/lib/libbsm/adt_record.xsl.1
+++ b/usr/src/lib/libbsm/adt_record.xsl.1
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <!--
- Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+ Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
  Use is subject to license terms.
 
  CDDL HEADER START
 
  The contents of this file are subject to the terms of the
- Common Development and Distribution License, Version 1.0 only
- (the "License").  You may not use this file except in compliance
- with the License.
+ Common Development and Distribution License (the "License").
+ You may not use this file except in compliance with the License.
 
  You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
  or http://www.opensolaris.org/os/licensing.
@@ -168,6 +167,11 @@
 	<BR/>
 	<I>SEQUENCE </I>
 	<I> seq-num: </I><xsl:value-of select="@seq-num"/>
+</xsl:template>
+
+<xsl:template match="fmri">
+	<BR/>
+	<I>FMRI: </I>   <xsl:value-of select="."/>
 </xsl:template>
 
 <xsl:template match="group">
