6406661 nightly doesn't tell about the shadow compiler 6406667 cw should tell you its version 6409965 cw waitpid and gcc writing to stderr can deadlock

--- a/usr/src/tools/cw/cw.1
+++ b/usr/src/tools/cw/cw.1
@@ -70,6 +70,13 @@ option is given, it must appear immediately following the compiler
 selection argument, and all other options will be disregarded.
 .LP
 .TP 4
+.B \-_versions
+Print the cw version, followed in turn by the path to and versions
+of each compiler which would be invoked.  If this option is given,
+it must appear immediately following the compiler selection argument,
+and all other options will be disregarded.
+.LP
+.TP 4
 .B \-_noecho
 Normally, cw writes to standard error the actual compiler commands
 invoked, each prefixed with '+'.  This option suppresses these
