PSARC/2006/217 Access and Dma Handle Error Clear Functions PSARC/2006/235 FMA for PCI Express and Leaf Devices 6193463 hostbridge .esc files don't fully handle pci-pci bridges 6195325 pci eversholt rules need to support multiple levels of pci-pci bridges 6202643 libtopo should provide pcibus information on x86 boxen 6207403 bridge error callbacks need to participate in handle lookup 6236885 ddi_fm_init leaks resources if parent not fm capable 6236895 ddi_fm_dma_err_get and ddi_fm_acc_err_get need to be more resilient 6239835 Need common diagnosis rules for PCI Express 6239838 Need common ereport generation routines for PCI Express error telemetry 6239840 Need common PCI error handling routines 6245935 RFE: enhance bge driver with FMA support 6304815 ddifm.c DDI_DEV_T_ANY ddi_prop_remove(9F) calls should use DDI_DEV_T_NONE 6326796 pci_check_regs() can match wrong node when an error occurs on a config space access 6327032 Provide FMA support for CK8-04/IO-4 PCI express chipsets 6347217 eversholt rules for handling of pci dto errors need changing 6351025 eft assertion failure: ffep != NULL 6360437 check_if_device_is_pciex should add properties for pciex nodes during pci device discovery 6360749 ddi_fm_service_impact() should raise an service impact ereport 6360764 It would be nice for a driver to have some way to clear err_status in a access or dma handle 6373233 bofi fault simulation should be made compatible with fma 6373293 Solaris 10 may not be properly diagnosing the faulty component after injecting an 'IOUE' 6373322 could define generic device driver ereports for internal chip errors 6393895 TOMATILLO_IOMMU_INVALID_ERR is treated as fatal when it need not be 6398325 eversholt can leak memory if there are constraints on both sides of a propagation 6411683 donot bind driver to PCI express disabled slots 6416496 reduce eversholt memory consumption by trimming open fmes

--- a/usr/src/cmd/fm/dicts/SUN4U.po
+++ b/usr/src/cmd/fm/dicts/SUN4U.po
@@ -3753,3 +3753,19 @@ msgid "SUN4U-8007-9E.impact"
 msgstr "The system will not be functioning at the same performance level with the STRAND removal.\n"
 msgid "SUN4U-8007-9E.action"
 msgstr "Schedule a repair procedure to replace the affected STRAND.  Use fmdump -v -u\n to identify the smallest CPU/Strand ID of the affected CORE on this\nSTRAND.\n"
+#
+# code: SUN4U-8007-AX
+# keys: fault.io.pci.device-invreq fault.io.tomatillo
+#
+msgid "SUN4U-8007-AX.type"
+msgstr "Fault"
+msgid "SUN4U-8007-AX.severity"
+msgstr "Critical"
+msgid "SUN4U-8007-AX.description"
+msgstr "Either the transmitting device sent an invalid request or the receiving device failed to respond.\n  Refer to %s for more information."
+msgid "SUN4U-8007-AX.response"
+msgstr "One or more device instances may be disabled\n"
+msgid "SUN4U-8007-AX.impact"
+msgstr "Loss of services provided by the device instances associated with this fault\n"
+msgid "SUN4U-8007-AX.action"
+msgstr "Ensure that the latest drivers and patches are installed. If a plug-in card is involved check for badly-seated cards or bent pins.  Otherwise schedule a repair procedure to replace the affected device(s).  Use fmdump -v -u  to identify the devices or contact Sun for support.\n"
